--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ PopRebalanceMod/__pycache__
 *.pyc
 pop_mod/__pycache__/views.cpython-311.pyc
 PopRebalanceMod/__pycache__/urls.cpython-311.pyc
+*.pyc
