--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,12 @@ PopRebalanceMod/__pycache__/urls.cpython-311.pyc
 *.pyc
 pop_mod/__pycache__/views.cpython-311.pyc
 *.pyc
+*.txt
+some_filename_here_BwXT64R
+some_filename_here
+some_filename_here_jRlHmig
+some_filename_here_RzvYsCf
+some_filename_here_XR4gP7R
+some_filename_here_YZoybzv
+*.pyc
+pop_mod/__pycache__/views.cpython-311.pyc
