--- a/pop_rebalance_mod/pubspec.yaml
+++ b/pop_rebalance_mod/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   file_picker: ^4.2.0
   http: ^0.13.3
+  archive: ^3.1.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
